--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI='mongodb+srv://aman26802:aman1234@cluster0.y8nh0ky.mongodb.net/'
+MONGO_URI='mongodb://127.0.0.1:27017/employee-review'
 PORT=8000
 SECRET='HELLO'
